# agent-priors

./: README.md  pyproject.toml
.claude-plugin/: marketplace.json
plugins/analyze/.claude-plugin/: plugin.json
plugins/analyze/agents/: adversary.md  investigator.md  scout.md  synthesizer.md  web-researcher.md
plugins/analyze/commands/: analyze.md
plugins/markdown/.claude-plugin/: plugin.json
plugins/markdown/hooks/: hooks.json
plugins/markdown/scripts/: compose-proposed.py  markdown-preview  render-active-plan
plugins/markdown/skills/markdown/: SKILL.md
plugins/persist/.claude-plugin/: plugin.json
plugins/persist/hooks/: hooks.json
plugins/poll/: .mcp.json
plugins/poll/.claude-plugin/: plugin.json
plugins/poll/hooks/: session-start.sh
plugins/poll/scripts/: poll  watch
plugins/poll/server/: main.py
plugins/reinforce/.claude-plugin/: plugin.json
plugins/reinforce/hooks/: hooks.json
plugins/reinforce/scripts/: reinforce.sh
plugins/release/.claude-plugin/: plugin.json
plugins/release/skills/release-plugin/: SKILL.md
plugins/remote/: .mcp.json
plugins/remote/.claude-plugin/: plugin.json
plugins/remote/commands/: remote.md
plugins/remote/hooks/: hooks.json
plugins/remote/scripts/: log-args  remote
plugins/remote/server/: main.py
plugins/remote/skills/remote/: SKILL.md
plugins/review/.claude-plugin/: plugin.json
plugins/review/hooks/: hooks.json
plugins/review/scripts/: nvim-review
plugins/tighten/.claude-plugin/: plugin.json
python/agent_priors/: hook_persist_submit.py  hook_precompact.py
